Basic React share sheet setup
Following the setup here: https://github.com/inaturalist/react-native-share-menu/blob/f5805e92082fd79f251cefbe86759201589f6e9a/SHARE_EXTENSION_VIEW.md

--- a/ios/iNaturalistReactNative-ShareExtension/Base.lproj/MainInterface.storyboard
+++ b/ios/iNaturalistReactNative-ShareExtension/Base.lproj/MainInterface.storyboard
@@ -9,7 +9,7 @@
         <!--Share View Controller-->
         <scene sceneID="ceB-am-kn3">
             <objects>
-                <viewController id="j1y-V4-xli" customClass="ShareViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="j1y-V4-xli" customClass="ReactShareViewController" customModule="iNaturalistReactNative-ShareExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="wbc-yd-nQP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
